--- a/shard.yml
+++ b/shard.yml
@@ -11,6 +11,10 @@ dependencies:
   rwlock:
     github: spider-gazelle/readers-writer
 
+  # Feel free to remove this dependency. Used for testing,
+  base62:
+    github: Sija/base62.cr
+
 development_dependencies:
   ameba:
     github: veelenga/ameba
