--- a/shard.yml
+++ b/shard.yml
@@ -2,14 +2,11 @@ name: private-drivers
 version: 1.0.0
 
 # Add your driver dependencies here.
-# engine-driver and rwlock are required for compiling and testing.
+# engine-driver is required for compiling and testing.
 dependencies:
   engine-driver:
     github: aca-labs/crystal-engine-driver
     branch: master
-
-  rwlock:
-    github: spider-gazelle/readers-writer
 
   # Feel free to remove this dependency. Used for testing,
   base62:
