--- a/shard.yml
+++ b/shard.yml
@@ -2,8 +2,8 @@ name: private-drivers
 version: 1.0.0
 
 # Add your driver dependencies here.
-# engine-driver is required for compiling and testing.
 dependencies:
+  # Required for compiling and testing ACAEngine drivers
   engine-driver:
     github: aca-labs/crystal-engine-driver
     branch: master
