--- a/shard.yml
+++ b/shard.yml
@@ -1,9 +1,148 @@
-name: private-drivers
+name: ucla-drivers
 version: 1.3.0
-crystal: ~> 1
 
 # Add your driver dependencies here.
 dependencies:
+  email:
+    github: arcage/crystal-email
+    version: ~> 0.6.0
+
+  bindata:
+    github: spider-gazelle/bindata
+    version: ~> 2.0
+
+  placeos-models:
+    github: placeos/models
+    version: ">= 9.37"
+
+  inactive-support:
+    github: spider-gazelle/inactive-support
+
+  jwt:
+    github: crystal-community/jwt
+
+  pinger:
+    github: spider-gazelle/pinger
+
+  ntlm:
+    github: spider-gazelle/ntlm
+
+  link-header:
+    github: spider-gazelle/link-header
+
+  place_calendar:
+    github: PlaceOS/calendar
+
+  office365:
+    github: PlaceOS/office365
+
+  placeos-compiler:
+    github: placeos/compiler
+
+  placeos-driver:
+    github: placeos/driver
+    version: ~> 7.1
+
+  # The PlaceOS API client
+  placeos:
+    github: placeos/crystal-client
+    version: ">= 2.10"
+
+  # HTTP Client helper
+  responsible:
+    github: place-labs/responsible
+
+  rwlock:
+    github: spider-gazelle/readers-writer
+
+  # Driver deps:
+  telnet:
+    github: spider-gazelle/telnet.cr
+
+  pars:
+    github: spider-gazelle/pars
+
+  # For lat lon location indexing
+  s2_cells:
+    github: spider-gazelle/s2_cells
+
+  # TODO:: deprecated, we should aim to remove at some point
+  qr-code:
+    github: spider-gazelle/qr-code
+
+  # A faster and better QR code implementation
+  goban:
+    github: soya-daizu/goban
+    branch: master
+
+  # For QR .png file export
+  stumpy_png:
+    github: stumpycr/stumpy_png
+
+  # the STOMP protocol
+  stomp:
+    github: spider-gazelle/stomp
+
+  # KNX protocol
+  knx:
+    github: spider-gazelle/knx
+
+  # MQTT protocol
+  mqtt:
+    github: spider-gazelle/crystal-mqtt
+
+  # XML to JSON convertor
+  oq:
+    github: blacksmoke16/oq
+    version: ~> 1.2
+
+  # signed requests to AWS APIs
+  awscr-signer:
+    github: taylorfinnell/awscr-signer
+    version: ~> 0.8
+
+  # BACnet protocol support
+  bacnet:
+    github: spider-gazelle/crystal-bacnet
+    version: ~> 0.10
+
+  # HTTP client
+  halite:
+    github: icyleaf/halite
+
+  # token bucket algorithm for rate limiting
+  rate_limiter:
+    github: lbarasti/rate_limiter
+    version: ~> 1.0
+
+  # fake data for mocks
+  faker:
+    github: askn/faker
+
+  # SOAP client
+  sabo:
+    github: place-technology/sabo
+
+  # AxiomXa client
+  axio:
+    github: place-technology/axio
+
+  # Lutron Quantum protocol
+  quantum:
+    github: place-technology/quantum
+
+  # Stripe API wrapper
+  stripetease:
+    github: place-technology/stripetease
+
+  # Siemens Desigo API wrapper
+  desigo:
+    github: place-technology/desigo
+
+  # debugging drivers
+  perf_tools:
+    github: crystal-lang/perf-tools
+
   # Required for compiling and testing PlaceOS drivers
   placeos-driver:
     github: placeos/driver
